[tool.poetry]
name = "ipilot"
version = "1.3.0"
description = "IP Information Lookup Tool"
authors = ["Luke Tainton <luke@tainton.uk>"]
readme = "README.md"

[tool.poetry.scripts]
app = "ipilot.main:main"

[tool.poetry.dependencies]
python = "^3.8"
astroid = "3.1.0"
attrs = "23.2.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
dill = "0.3.8"
exceptiongroup = "1.2.1"
idna = "3.7"
iniconfig = "2.0.0"
lazy-object-proxy = "1.10.0"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
packaging = "24.0"
pathspec = "0.12.1"
platformdirs = "4.2.0"
pluggy = "1.5.0"
py = "1.11.0"
pyparsing = "3.1.2"
requests = "2.31.0"
six = "1.16.0"
tabulate = "0.9.0"
tomli = "2.0.1"
tomlkit = "0.12.4"
urllib3 = "2.2.1"
wrapt = "1.16.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
coverage = "^7.5.0"
pylint = "^3.1.0"
pylint-exit = "^1.2.0"
pytest = "^8.1.1"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
